# dinewith-final-grades

./: .gitmodules  .pre-commit-config.yaml  README.rst  environment.yml  final_grade_computation_st.py  noxfile.py  pyproject.toml
common/: .pre-commit-config.yaml  .pylintrc  README.md  environment.yml  hash.py  itertools_ext.py  logger_config.py  pyproject.toml  setup.cfg
common/atlassian_utils/: general.py
common/atlassian_utils/confluence_utils/templates/: Capacity_planning_template.txt  Customer_interview_report_template.txt  Hiring_process_template.txt  Incident_communication_template.txt  Interview_feedback_template.txt  Product_roadmap_template.txt  Retrospective_template.txt  Sprint_planning_meeting_template.txt  Strategic_plan_template.txt  Weekly_meeting_notes_template.txt  master_project_documentation_template.txt  project_plan_template.txt  project_poster_template.txt
common/atlassian_utils/jira_utils/: on_ticket_communication.py  scheduled_jira_emails.py  ticket.py  ticket_actions.py  user.py
common/atlassian_utils/jira_utils/board_ci/: jira_column_ci.py  rules_and_filters.py
common/atlassian_utils/tests/: example_create_confluence_template.py  test_access_jira.py  test_example_column_rule_ci.py  test_on_ticket_communication.py
common/datasets/: cifar.py  imagenet.py  nist.py
common/datasets/stanford_cars/: __init__.py  download.sh  stanford_cars.py
common/db/: README.md  oracle.py  postgres.py  sqlalchemy_utils.py
common/experiments/: config2args.py  expr_util.py  file_util.py  offline_run.py  tee.py
common/geographic/: bounding_box.py  folium_extensions.py  general.py  geo_map.py  geo_utils.py  visualization_utils.py  visualizations.py
common/lint/tests/: test_sqlfluff.py
common/metrics/: cluster_evaluation.py
common/nn/: lr_finder.py
common/nn/lightning/: pl_model.py
common/nn/lightning/examples/: cifar10_module.py  config_helper.py  stl_model.py  stl_standalone_model.py  train_cifar10.py
common/nn/losses/: __init__.py  focal_loss.py  label_smoothing.py  tunable_label_smoothing.py
common/nn/models/general/: mlp.py  multihead_linear.py
common/nn/models/image/: preact_resnet.py  proto_net.py  resnet.py  resnet_pt.py  simple_nist_cnn.py  vgg.py  wideresnet.py
common/nn/models/text/: bert_gru.py
common/parallel/: multiproc_util.py  parallel_load.py
common/parallel/tests/: test_multiproc_utils.py
common/visualizations/: general.py  photo_slider.py  pytorch.py
common/web_scraping/: verification.py
common/web_scraping/tests/: test_verification.py
(+17 files in other folders)
