[tool.poetry]
name = "common"
version = "0.1.0"
description = "Common"
authors = ["Jonathan Zarecki <mail@jonzarecki.com>"]
readme = "README.rst"
homepage = "https://github.com/jonzarecki/common"
repository = "https://github.com/jonzarecki/common"
documentation = "https://common.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/jonzarecki/common/releases"


[tool.coverage.run]
source = ["common"]
omit = [
  "setup.py",
  "*config*.py",
  "*constants*.py",
  "**/notebooks/**",
  "*/tests/*",
  "*/main.py",
  "**/__init__.py"]
data_file = ".cache/.coverage"


[tool.coverage.report]
show_missing = true
fail_under = 0
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_files = [
  "test_*.py",
#   "example_*.py"
]



[tool.mypy]
python_version = "3.7"
show_error_context = true
show_column_numbers = true
pretty = true
show_error_codes = true

disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_reexport = true
#disallow_subclassing_any = true
#disallow_untyped_calls = true
#disallow_any_unimported = true
#warn_unused_configs = true
# warn_unused_ignores = true  # purposely disabled
#strict_equality = true

#[[tool.mypy.overrides]]  # example of module disable for mypy
#module = "google.oauth2.*"
#ignore_missing_imports = true

[tool.vulture]
# ignore_decorators = ["@app.route", "@require_*"]
exclude = ["notebooks/", "**/tests/"]
make_whitelist = true
min_confidence = 100
paths = ["common"]
sort_by_size = true
verbose = false  # verbose doesn't work on utf-8


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
